@@ -33,6 +33,7 @@
 - Fixed reenroll scenario {pull}23686[23686]
 - Fixed Monitoring filebeat and metricbeat not connecting to Agent over GRPC {pull}23843[23843]
 - Fixed make status readable in the log. {pull}23849[23849]
+- Windows agent doesn't uninstall with a lowercase `c:` drive in the path {pull}23998[23998]
 
 ==== New features
 
